# cowcat-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  config.toml.example  docker-compose.yml  rules.toml.example
.github/workflows/: binary-release.yml  dev-cleanup.yml  digest-cleanup.yml  docker-dev.yml  docker-release.yml  docker.yml
src/: bot.rs  config.rs  main.rs  protocol.rs  rules.rs  rules_watcher.rs  state.rs  static_files.rs
src/crypto/: mod.rs  pow.rs  token.rs
src/handlers/: favicon.rs  message.rs  mod.rs  pow.rs
src/ip_source/: ip.rs
src/middleware/: pow.rs
src/protocol/: frame.rs  http.rs  ip.rs
src/proxy/: forward.rs
src/storage/: mod.rs  task_store.rs
static/: catpaw.css  catpaw.html  catpaw.js
static/assets/: catpaw.min.css  catpaw.min.js  catpaw.worker.min.js  cowcat-embed.js  meta.min.js
static/core/: catpaw.core.js  catpaw.wasm  catpaw.worker.js  meta.js
static/core_minify/: catpaw.core.min.js
static/default/: catpaw.css  catpaw.html  catpaw.style.js
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
web/example/: custom.html  style.js
